# sh-final-blue-harness-lab

./: .gitignore  README.md
01_infra-iac/: README.md  backend.tf  main.tf  (+3 more)
04_web-faas-builder/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  sample-app.py  test.yaml  test_spot.yaml
04_web-faas-builder/.github/workflows/: ecr-build.yaml
04_web-faas-builder/docs/: DEPLOYMENT_FLOW.md
04_web-faas-builder/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  iam-policy.json  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
04_web-faas-builder/scripts/: README.md  cleanup-test-spinapps.sh  test-all.sh  test-build.sh  test-deploy.sh  test-health.sh  test-scaffold.sh  test-task-status.sh  test-workspace-tasks.sh
04_web-faas-builder/src/: __init__.py  config.py
04_web-faas-builder/src/api/: __init__.py  routes.py
04_web-faas-builder/src/models/: __init__.py  api_models.py  manifest.py
04_web-faas-builder/src/services/: __init__.py  build.py  core_service.py  deploy.py  dynamodb.py  file_handler.py  manifest.py  push.py  s3_storage.py  scaffold.py  task_manager.py  validation.py
04_web-faas-builder/tests/: test_api_validation.py  test_autoscaling.py  test_core_service.py  test_deploy_service.py  test_dynamodb_service.py  test_file_handler.py  test_manifest_roundtrip.py  test_push_service.py  test_resource_validation.py  test_s3_storage.py  test_scaffold_service.py  test_service_query.py  test_spot_configuration.py  test_task_manager.py  test_validation.py
(+171 files in other folders)
